--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -41,6 +41,9 @@ spec:
           initialDelaySeconds: 15
           timeoutSeconds: 1
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: 200m
 
 ---
 
